--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,8 +1,10 @@
 :root {
-    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-    --nav-height: 44px;
-    --container-width: 980px;
-}
+  /* 尺寸 */
+  --nav-height: 44px;
+  --container-width: 980px;
+  
+  /* 字体 */
+  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+} 
